# cove

./: CLAUDE.md  cratify-todo.txt
ios/CodeScanner/: CodeScanner.swift  QrAnalyzer.swift  ScannerViewController.swift
ios/Cove.xcodeproj/: project.pbxproj
ios/CoveCore/Sources/CoveCore/: cove_nfc.swift
rust/: Cargo.toml
rust/crates/cove-database/: Cargo.toml  uniffi.toml
rust/crates/cove-database/src/: cbor.rs  error.rs  global_cache.rs  global_config.rs  global_flag.rs  historical_price.rs  key.rs  lib.rs  macros.rs  record.rs  unsigned_transactions.rs  wallet.rs  wallet_data.rs
rust/crates/cove-database/src/historical_price/: record.rs
rust/crates/cove-database/src/key/: outpoint.rs
rust/crates/cove-database/src/wallet_data/: label.rs
rust/crates/cove-fiat/: Cargo.toml  uniffi.toml
rust/crates/cove-fiat/src/: amount.rs  client.rs  currency.rs  error.rs  historical.rs  lib.rs
rust/crates/cove-node/: Cargo.toml  uniffi.toml
rust/crates/cove-node/src/: client.rs  client_builder.rs  constants.rs  error.rs  lib.rs  node.rs
rust/crates/cove-node/src/client/: electrum.rs  esplora.rs
rust/crates/cove-transaction/: Cargo.toml  uniffi.toml
rust/crates/cove-transaction/src/: fees.rs  ffi.rs  lib.rs  transaction_details.rs  unsigned_transaction.rs
rust/crates/cove-transaction/src/fees/: client.rs
rust/crates/cove-types/: Cargo.toml
rust/crates/cove-types/src/: lib.rs  network.rs
rust/crates/cove_nfc/src/: lib.rs
rust/src/: app.rs  lib.rs  nfc.rs  node_connect.rs  pending_wallet.rs  transaction.rs  wallet.rs
rust/src/app/: reconcile.rs
rust/src/database/: global_config.rs  wallet.rs
rust/src/tap_card/: tap_signer_reader.rs
rust/src/transaction/: amount.rs
rust/src/wallet/: metadata.rs
