[package]
name = "cove-fiat"
version = "0.1.0"
edition = "2024"

[dependencies]
cove-types = { path = "../cove-types" }
macros = { path = "../macros" }
util = { path = "../util" }

# bitcoin
bitcoin = { workspace = true }

# error handling
thiserror = { workspace = true }
eyre = "0.6"

# serialization
serde = { workspace = true }
serde_json = "1.0"

# time
jiff = { workspace = true }

# concurrency
arc-swap = "1.7"
once_cell = "1.19.0"

# http
reqwest = { version = "0.12", features = ["json"] }

# utilities
tryhard = "0.5"

# derive utilities
derive_more = { workspace = true, features = [
    "display",
    "add",
    "mul",
    "from",
    "into",
    "as_ref",
    "from_str",
    "deref",
    "deref_mut",
] }
strum = { version = "0.27", features = ["derive"] }

# async
tokio = { version = "1.38", features = ["rt"] }

# logging
tracing = "0.1"

# bindings
uniffi = { workspace = true, features = ["tokio"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
# internal crates
