[package]
name = "cove-transaction"
version = "0.1.0"
edition = "2024"

[dependencies]
# internal crates
macros = { path = "../macros" }
cove-types = { path = "../cove-types" }
cove-fiat = { path = "../cove-fiat" }
cove-nfc = { path = "../cove-nfc" }

# bitcoin
bitcoin = { workspace = true, features = ["serde"] }
bdk_chain = { workspace = true }
bdk_wallet = { workspace = true }
bip329 = { workspace = true }

# error handling
thiserror = { workspace = true }
eyre = "0.6"

# serialization
serde = { workspace = true }
serde_json = "1.0"

# database
redb = { workspace = true }

# timestamp
jiff = { workspace = true, features = [] }

# derive utilities
derive_more = { workspace = true, features = [
    "display",
    "add",
    "mul",
    "from",
    "into",
    "as_ref",
    "from_str",
    "deref",
    "deref_mut",
] }

# uniffi
uniffi = { workspace = true, features = ["tokio"] }

# ids
nid = { workspace = true }

# randomness
rand = { workspace = true, features = ["std_rng"] }

# encoding
hex = { workspace = true }

# utils
numfmt = "1.1"
strum = { version = "0.27", features = ["derive"] }
arc-swap = "1.7"
once_cell = "1.19.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tryhard = "0.5"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
